Fix spacing in loader bar

--- a/style/base/_animations.scss
+++ b/style/base/_animations.scss
@@ -17,3 +17,15 @@
     opacity: 1;
   }
 }
+
+@keyframes loader-bar-stretch {
+  0%,
+  40%,
+  100% {
+    transform: scaleY(0.4);
+  }
+
+  20% {
+    transform: scaleY(1.0);
+  }
+}
