--- a/style/components/_loader.scss
+++ b/style/components/_loader.scss
@@ -13,17 +13,27 @@
 }
 
 .loader__bars {
+  display: flex;
+  align-items: center;
+
   height: 100px;
   text-align: center;
+
+  font-size: 0;
 }
 
 .loader__bar {
-  background-color: $torch-red;
-  height: 100%;
-  width: 12px;
   display: inline-block;
 
+  width: 12px;
+  height: 100%;
+
+  background-color: $torch-red;
   animation: loader-bar-stretch 1.2s infinite ease-in-out;
+
+  &:not(:last-child) {
+    margin-right: 2px;
+  }
 
   &:nth-child(2) {
     animation-delay: -1.1s;
@@ -39,17 +49,5 @@
 
   &:nth-child(5) {
     animation-delay: -0.8s;
-  }
-}
-
-@keyframes loader-bar-stretch {
-  0%,
-  40%,
-  100% {
-    transform: scaleY(0.4);
-  }
-
-  20% {
-    transform: scaleY(1.0);
   }
 }
